--- a/.env
+++ b/.env
@@ -6,8 +6,12 @@ BAIS_URL ="http://localhost:4000"
 SMTP_HOST = smtp.gmail.com
 SMTP_PORT = 465
 SMTP_SERVICE = "gmail"
-SMTP_MAIL =saad.elnady.work@gmail.com
-SMTP_PASSWORD = zpmf bmdl awbi ewnt
+SMTP_MAIL = admiin835@gmail.com
+SMTP_PASSWORD = xmjv zedn fvkf rksm
+
+
+
+
 
  
 
