--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "autentication-authorization",
+  "name": "exclusive",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
